--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,8 +4,7 @@
     "sourceMap": true,
     "moduleResolution": "node",
     "outDir": "dist",
-    "baseUrl": "src",
-    "noImplicitAny": true
+    "baseUrl": "src"
   },
   "include": ["src/**/*"]
 }
