--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
     "start": "node src/server.ts",
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon ./src/server.ts",
     "dev-ts": "ts-node-dev src/server.ts",
     "build": "npx tsc"
   },
