signup method and setup to mongodb with mongoose fix done

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
+    "module": "nodenext",
     "sourceMap": true,
     "moduleResolution": "node",
+    "target": "es2017",
     "outDir": "dist",
     "baseUrl": "src",
     "esModuleInterop": true
