--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "engines": {
-    "node": "16.13.2"
+    "node": "16.x",
+    "npm": "9.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,8 +27,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
-    "mongoose": "^7.1.0",
-    "mongoose-unique-validator": "^4.0.0"
+    "mongoose": "^7.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -35,7 +35,6 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
-    "@types/mongoose-unique-validator": "^1.0.7",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
@@ -44,5 +43,8 @@
     "nodemon": "^2.0.22",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "resolutions": {
+    "@types/mongoose": "5.0.7"
   }
 }
