--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
-    "start": "node dist/main.js",
+    "start": "npm run build && node dist/server.js",
     "dev": "nodemon ./src/server.ts",
     "dev-ts": "ts-node-dev src/server.ts",
     "build": "npx tsc"
