--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
     "start": "npm run build && node dist/server.js",
-    "dev": "nodemon ./src/server.ts",
+    "dev": "nodemon /src/server.ts",
     "dev-ts": "ts-node-dev src/server.ts",
     "build": "npx tsc"
   },
