--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
-    "module": "nodenext",
+    "module": "CommonJS",
     "sourceMap": true,
     "moduleResolution": "node",
     "target": "es2017",
     "outDir": "dist",
     "esModuleInterop": true
+  },
+  "ts-node": {
+    "esm": true
   }
 }
