--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
-    "start": "node server.ts",
+    "start": "node dist/server.js",
     "dev": "nodemon",
     "dev-ts": "ts-node-dev src/server.ts",
-    "build": "npx tsc"
+    "build": "tsc",
+    "prettier": "prettier --write src/**/*.ts"
   },
   "keywords": [],
   "author": "",
@@ -41,7 +42,7 @@
     "eslint": "^8.39.0",
     "eslint-plugin-react": "^7.32.2",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
+    "prettier": "^3.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
