--- a/backend/package.json
+++ b/backend/package.json
@@ -11,23 +11,23 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
     "start": "node dist/server.js",
-    "dev": "nodemon",
-    "dev-ts": "ts-node-dev src/server.ts",
+    "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "prettier": "prettier --write src/**/*.ts"
+    "deploy": "git push heroku main"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.3.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.1.0"
   },
   "devDependencies": {
@@ -36,17 +36,12 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^18.16.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
-    "eslint": "^8.39.0",
+    "@types/node": "^20.4.6",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "eslint": "^8.46.0",
     "eslint-plugin-react": "^7.32.2",
-    "nodemon": "^2.0.22",
-    "prettier": "^3.0.1",
-    "ts-node-dev": "^2.0.0",
+    "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
-  },
-  "resolutions": {
-    "@types/mongoose": "5.0.7"
   }
 }
