--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
-    "start": "node dist/server.js",
+    "backend": "node dist/server.js",
     "dev": "nodemon src/server.ts",
+    "frontend": "cd frontend/ && npm start",
+    "heroku-postbuild": "npm install --prefix frontend && npm run build --prefix frontend",
     "build": "tsc",
     "deploy": "git push heroku main"
   },
