--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
-    "backend": "node dist/server.js",
+    "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "frontend": "cd frontend/ && npm start",
-    "build-frontend": "cd frontend/ && npm build",
+    "build-frontend": "cd frontend/ && npm run build",
     "heroku-postbuild": "npm install --prefix frontend && npm run build --prefix frontend",
     "build-backend": "tsc",
     "deploy": "git push heroku main"
